# bio-bundles

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: NOTES-checkpoint.txt
bundles/: _model.txt  dfba.ipynb  dfba_final.json  dfba_initial.json  model.txt  particle.ipynb
bundles/.ipynb_checkpoints/: dfba-checkpoint.ipynb  particle-checkpoint.ipynb
tests/fixtures/sbml-core/: BIOMD0000000001_url.xml.psc
tests/fixtures/smoldyn/: caravagna.txt  fe2_binding2.simularium  fe2_binding2.txt  lip.txt  lip2.txt  lip5.txt  lotka_volterra.txt  model_out.txt  molecule.txt  test.simularium  test.txt  test_out.txt  tracking.txt  tracking_listmols.txt  tracking_trackmol.txt
tests/fixtures/smoldyn/.ipynb_checkpoints/: crowding4-checkpoint.txt  lip-checkpoint.txt  lip2-checkpoint.txt  lip3-checkpoint.txt  lip4-checkpoint.txt  lip5-checkpoint.txt  model_out-checkpoint.txt
